--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -48,6 +48,23 @@ h1, h2, h3, h4, h5, h6 {
   border-color: #74d6b9;
 }
 
+@media only screen and (max-width: 600px) {
+  .navbar-nav .active {
+    margin: 5px 0px 0px 0px;
+    font-weight: 600;
+    color: #fff;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 992px) {
+  .navbar-nav .active {
+    margin: 5px 0px 0px 30px;
+    font-weight: 600;
+    color: #fff;
+  }
+}
+
 #intro {
   display: table;
   width: 100%;
@@ -59,13 +76,81 @@ h1, h2, h3, h4, h5, h6 {
   /* background-size: cover; */
 }
 
+@media only screen and (max-width: 600px) {
+  #intro .intro-box {
+    width: 100%;
+    background-color: rgba(0,0,0,0.6);
+    color: #fff;
+    margin-top: 50%;
+    padding: 10px 0px 10px 10%;
+  }
+  #intro .intro-box .intro-text h2 {
+    margin: 10px;
+    font-weight: 600;
+    font-size: 1.6rem;
+  }
+
+  #intro .intro-box .intro-text h3 {
+    margin: 10px;
+    font-weight: lighter;
+    font-size: 1.9rem;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  #intro .intro-box {
+    margin-top: 35%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.6);
+    color: #fff;
+    padding: 10px 0px 10px 10%;
+  }
+
+  #intro .intro-box .intro-text h2 {
+    margin: 10px;
+    font-weight: 600;
+    font-size: 1.6rem;
+  }
+
+  #intro .intro-box .intro-text h3 {
+    margin: 10px;
+    font-weight: lighter;
+    font-size: 1.9rem;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  #intro .intro-box {
+    margin-top: 33%;
+    width: 100%;
+    background-color: rgba(0,0,0,0.6);
+    color: #fff;
+    padding: 10px 0px 10px 10%;
+  }
+
+  #intro .intro-box .intro-text h2 {
+    margin: 10px;
+    font-weight: 600;
+    font-size: 1.9rem;
+  }
+
+  #intro .intro-box .intro-text h3 {
+    margin: 10px;
+    font-weight: lighter;
+    font-size: 2.1rem;
+  }
+}
+/*
+
 #intro .intro-box {
   width: 100%;
   background-color: rgba(0,0,0,0.6);
   color: #fff;
   margin-top: 33%;
   padding: 10px 0px 10px 10%;
-}
+} */
 
 #intro .intro-box .row {
     margin-right: 0px;
@@ -77,7 +162,7 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 2px;
   }
 
-#intro .intro-box .intro-text h2 {
+/* #intro .intro-box .intro-text h2 {
   margin: 10px;
   font-weight: 600;
   font-size: 1.9rem;
@@ -87,7 +172,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 10px;
   font-weight: lighter;
   font-size: 2.1rem;
-}
+} */
 
 #intro .intro-box .intro-buttons {
   display: inline;
