Contact Us page Created

--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -353,3 +353,11 @@ form input {
     width:100%;
     position:absolute;
 }
+
+
+.contact-tables table td {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
