--- a/css/myStyle.css
+++ b/css/myStyle.css
@@ -95,6 +95,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   #contact-bar {
+    background-color: #000;
     color:#fff;
     display: none;
   }
@@ -108,6 +109,7 @@ h1, h2, h3, h4, h5, h6 {
 
 @media only screen and (min-width: 600px) {
   #contact-bar {
+    background-color: #000;
     color:#fff;
     display: none;
   }
@@ -115,6 +117,8 @@ h1, h2, h3, h4, h5, h6 {
 
 @media only screen and (min-width: 768px) {
   #contact-bar {
+    padding-bottom: 10px;
+    background-color: #000;
     color:#fff;
     display: none;
   }
@@ -130,6 +134,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   #contact-bar {
+    background-color: #000 !important;
     color:#fff;
     display: block;
   }
@@ -141,7 +146,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   #menu-bar{
-    margin-top: 30px !important;
+    margin-top: 38px !important;
     padding-top: 5px;
     padding-bottom: 5px;
   }
